--- a/Ico.html
+++ b/Ico.html
@@ -513,7 +513,7 @@
                     see the project flourish so that their presale tokens grow in value. To partake in an ICO, users
                     typically need to buy a more established digital currency and have a basic grasp of cryptocurrency
                     wallets and exchanges. Launching an ICO campaign successfully requires proven expertise in ICO-based
-                    services such as Clarisco. We are a renowned ICO development company that proffers a variety of ICO
+                    services such as Buster apps. We are a renowned ICO development company that proffers a variety of ICO
                     services. Our specialized team can assist you to overcome technological hurdles with cutting-edge
                     solutions. A highly intellectual team of developers that works rigorously is assigned to you in order
                     to make sure that an avant-garde solution is developed as per your distinct business needs.</p>
@@ -1049,7 +1049,7 @@
                   <h2 class="mb-4">
                     Why Choose Our ICO Script Software?
                   </h2>
-                  <p class='mb-3'>Clarisco Solutions is a renowned ICO development company with hands-on experience
+                  <p class='mb-3'>Buster apps  is a renowned ICO development company with hands-on experience
                     developing ICO software, smart contracts, and white papers. We have completed several ICO projects
                     integrated with revolutionary features and security mechanisms. All you have to do is specify your
                     demands, and our team will oversee the process and deliver the ICO software by leveraging our
@@ -1226,7 +1226,7 @@
                     <div class="accordion-body">
                       The time required to deliver a fully-featured ICO platform using our ICO Script Software depends on
                       multiple factors such as level of sophistication, features and functionalities to be incorporated
-                      additionally, and others. This time might vary from a couple of days to a couple of weeks. Clarisco
+                      additionally, and others. This time might vary from a couple of days to a couple of weeks. Buster apps
                       Solutions is known for its ability to deliver projects on time!.
                     </div>
                   </div>
