--- a/cryptoexchange.html
+++ b/cryptoexchange.html
@@ -1060,7 +1060,7 @@
             <div class="container">
               <h2 class="text-center mb-3">Cryptocurrency Exchange App Development</h2>
               <p class=" text-center mb-5">As one of the renowned cryptocurrency exchange development
-                companies, Clarisco Solutions has delivered myriad Cryptocurrency Exchange Applications to numerous
+                companies, Buster apps has delivered myriad Cryptocurrency Exchange Applications to numerous
                 high-end companies and entrepreneurs across the globe. Leverage our crypto expertise today and develop an
                 awe-inspiring crypto exchange application that is compatible across multiple platforms. Our cryptocurrency
                 exchange app development service comprises of:</p>
@@ -1261,7 +1261,7 @@
           <section class="py-5 border-bottom">
             <div class="container">
               <div class="row  align-items-center text-center g-4">
-                <h2 class="mb-4">Why Choose Clarisco Solutions for your cryptocurrency exchange?</h2>
+                <h2 class="mb-4">Why Choose Buster apps for your cryptocurrency exchange?</h2>
                 <p class="">Being a renowned Cryptocurrency Exchange Development Company, we design and
                   develop tailored crypto
                   exchange software solutions, incorporated with cutting-edge features and security protocols. With a team
