--- a/smartcontract.html
+++ b/smartcontract.html
@@ -620,7 +620,7 @@
                     <div class="card-body">
                       <i class="bi bi-layers-fill fs-24 fc-b"></i>
                       <h3 class="card-title mt-2">Health Wallet</h3>
-                      <p class=" card-text">Clarisco Solution creates the blockchain solution to facilitate
+                      <p class=" card-text">Buster apps creates the blockchain solution to facilitate
                         smooth transactions between healthcare providers, payers, and patients.</p>
                     </div>
                   </div>
@@ -630,7 +630,7 @@
                     <div class="card-body">
                       <i class="bi bi-layers-fill fs-24 fc-b"></i>
                       <h3 class="card-title mt-2"> ERC-721 Smart Contracts</h3>
-                      <p class=" card-text">The Clarisco Solution's skilled developers create smart contracts
+                      <p class=" card-text">The Buster apps's skilled developers create smart contracts
                         that comply with ERC-721. These contracts can be used to protect critical work and register real
                         estate contracts.</p>
                     </div>
@@ -939,7 +939,7 @@
                     <div class="card-body">
                       <i class="bi bi-layers-fill fs-24 fc-b"></i>
                       <h3 class="card-title mt-2"> Digital certificates</h3>
-                      <p class=" card-text">Clarisco Solution creates cutting-edge smart contract solutions
+                      <p class=" card-text">Buster apps creates cutting-edge smart contract solutions
                         that eliminate third party dependence, eliminate fraudulence, and provide transparency during
                         digital record verification.</p>
                     </div>
