--- a/dapps.html
+++ b/dapps.html
@@ -530,7 +530,7 @@
                 <h3 style="font-size: 35px;"  class="text-center mb-3">DApps Development Service</h3>
               <p class=" text-center mb-5">We provide a command line interface kit to manage the life cycle of
                 blockchain and maintain a population database in the ecosystem. We add a workflow to increase the
-                effectiveness of blockchain with the help of smart contracts. The Clarisco Solution uses a wide range of
+                effectiveness of blockchain with the help of smart contracts. The Buster apps uses a wide range of
                 applications with the following features:</p>
               <div class="row">
                 <div class="col-lg-8 mx-auto">
@@ -547,7 +547,7 @@
                       in various content address storage methods</li>
                     <li class="list-group-item"><i class="bi bi-check2-circle me-2 fs-24 fc-b"></i>You need to start with
                       all these elements to maximize profits as much as possible</li>
-                    <li class="list-group-item"><i class="bi bi-check2-circle me-2 fs-24 fc-b"></i>Clarisco Solution is a
+                    <li class="list-group-item"><i class="bi bi-check2-circle me-2 fs-24 fc-b"></i>Buster apps is a
                       Dapps development company with Ethereum and customized blockchain solutions. It also offers
                       peer-to-peer transparency, goofy code and greater flexibility.</li>
                   </ul>
@@ -565,7 +565,7 @@
           <section class="border-bottom py-5">
             <div class="container">
                 <h3 style="font-size: 35px;"  class="mb-3 text-center">Ethereum DApps development</h3>
-              <p class=" mb-3 text-center">Clarisco Solution is a Dapps development company with Ethereum and
+              <p class=" mb-3 text-center">Buster apps is a Dapps development company with Ethereum and
                 customized blockchain solutions. It also offers peer-to-peer transparency, goofy code and greater
                 flexibility.</p>
               <div class="row align-items-center">
@@ -600,7 +600,7 @@
                     </div>
                     <div class="flex-grow-1 ms-3">
                       <h3 class="card-title mt-2">Idle time</h3>
-                      <p class=" card-text" style="color: #fff;">Clarisco Solution creates the blockchain solution to facilitate
+                      <p class=" card-text" style="color: #fff;">Buster apps creates the blockchain solution to facilitate
                         smooth transactions between healthcare providers, payers, and patients.</p>
                     </div>
                   </div>
@@ -623,7 +623,7 @@
                     assets. Developing
                     applications based on Smart Contract Software Development Tools (SDKs) for business needs, thus
                     accelerating market time. It is used to resolve gas prices, network congestion and changes in
-                    protocol. We make sure you always get the right smart contract development solution at Clarisco
+                    protocol. We make sure you always get the right smart contract development solution at Buster apps
                     Solution!</p>
                   <a  id="btnOpenForm2" class="btn btn-outline-primary btn-md mt-2">Talk With Our Experts</a>
                 </div>
