all changes done

--- a/stormgain.html
+++ b/stormgain.html
@@ -606,7 +606,7 @@
                     <div class="col-12 col-lg-6">
                         <!-- About Content -->
                         <div class="about-thumb text-center wow fadeInRight" data-wow-duration="1.4s">
-                        <img src="https://www.appdupe.com/img/binance-clone/binance_banner_main.png">
+                        <img src="assets/img/welcome/stormgainlap_imac2015_front.png">
                         </div>
                     </div>
                 </div>
