--- a/boxverse.html
+++ b/boxverse.html
@@ -629,7 +629,7 @@
                     <div class="col-12 col-lg-6">
                         <!-- About Content -->
                         <div class="about-thumb text-center wow fadeInRight" data-wow-duration="1.4s">
-                        <img src="https://www.appdupe.com/img/binance-clone/binance_banner_main.png">
+                        <img src="assets/img/welcome/boxversepc_imac2015_front.png">
                         </div>
                     </div>
                 </div>
