--- a/corestarter.html
+++ b/corestarter.html
@@ -602,7 +602,7 @@ Solutions provided
                     <div class="col-12 col-lg-6">
                         <!-- About Content -->
                         <div class="about-thumb text-center wow fadeInRight" data-wow-duration="1.4s">
-                        <img src="https://www.appdupe.com/img/binance-clone/binance_banner_main.png">
+                        <img src="assets/img/welcome/corestartpc_imac2015_front.png">
                         </div>
                     </div>
                 </div>
